# JniDemo

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/xq/jnidemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: file-encrypt.cpp  file-split-merge.cpp  native-lib.cpp  posix_thread.cpp  zzq.h
app/src/main/cpp/ffmpeg/: ffmpeg_audio_player.cpp  ffmpeg_decode_demo.cpp  ffmpeg_player.cpp  ffmpeg_video_player.cpp  myffmpeg.cpp  queue.c  queue.h  video_utils.h
app/src/main/java/com/xq/jnidemo/: JNIDemoApplication.java  JNIErrorCheck.java  JniActivity.java  MainActivity.java
app/src/main/java/com/xq/jnidemo/ffmpeg/: FFmpegActivity.java  VideoPlayerActivity.java  VideoUtils.java  VideoView.java
app/src/main/java/com/xq/jnidemo/file_encrypt/: FileEncryptActivity.java
app/src/main/java/com/xq/jnidemo/file_split_merge/: FileSplitMergeActivity.java
app/src/main/java/com/xq/jnidemo/posix_thread/: POSIXThreadActivity.java  UUIDUtils.java
app/src/main/res/layout/: activity_ffmpeg_activity.xml  activity_file_encrypt.xml  activity_file_split_merge.xml  activity_main.xml  activity_video_player_activity.xml  posix_thread_activity.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/xq/jnidemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
